--- a/rust-webvr-api/Cargo.toml
+++ b/rust-webvr-api/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust-webvr-api"
-version = "0.10.0"
+version = "0.10.1"
 authors = ["The Servo Project Developers"]
 
 homepage = "https://github.com/servo/rust-webvr"
@@ -17,8 +17,10 @@ default = ["utils", "jni_utils"]
 utils = ["time"]
 jni_utils = ["android_injected_glue"]
 serde-serialization = ["serde", "serde_derive"]
+ipc = ["serde-serialization", "ipc-channel"]
 
 [dependencies]
+ipc-channel = { version = "0.11", optional = true }
 serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
 time = { version = "0.1", optional = true }
