--- a/rust-webvr/Cargo.toml
+++ b/rust-webvr/Cargo.toml
@@ -25,13 +25,11 @@ glwindow = ["euclid", "gleam", "glutin", "winit"]
 openvr = ["libloading"]
 mock = []
 googlevr = ["gvr-sys"]
-magicleap = ["euclid", "atomicbox"]
+magicleap = ["euclid", "gleam"]
 oculusvr = ["ovr-mobile-sys"]
 
 [dependencies]
 rust-webvr-api = { path = "../rust-webvr-api", version = "0.10.4" }
-atomicbox = { version = "0.2", optional = true }
-euclid = { version = "0.19", optional = true }
 log  = "0.4"
 libloading = { version = "0.5", optional = true, default-features = false }
 gvr-sys = { version = "0.7", optional = true }
